--- a/stylesCSS/gallery.css
+++ b/stylesCSS/gallery.css
@@ -1,4 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap');
+@media screen and (max-width: 500px)  {
+    nav {
+        width: 50%;
+        margin: auto;
+        
+    }
+    a {
+        padding: 15px;
+    }
+}
 body {
     display: flex;
     align-items: center;
